# trading-watchlist

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  WATCHLIST_SCHEMA.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: schema.sql
config/systemd/: watchlist.service  watchlist.timer
docs/: IBKR_SETUP.md  WSL_SETUP.md
scripts/: build_watchlist.py
src/ross_watchlist_diy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/trading_watchlist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/watchlist/: builder.py  cli.py  db.py  float_provider.py  ibkr.py  market_phase.py  news.py  output.py  profiles.py  rvol.py  sanity.py  scoring.py  settings.py
tests/: test_aapl.py  test_fallback.py  test_market_phase.py  test_rvol_time_of_day.py
